Fixed multicombo field chip misalignment in firefox

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -1466,7 +1466,6 @@ img.tag-reference-wiki-image {
     border: 1px solid #ddd;
     width: 100px;
     height: 31px;
-    overflow: hidden;
 }
 .form-field-input-multicombo input {
     border: none;
